platform/platform/platform-observability/grafana-resources/instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-public
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.licenta.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
